--- a/Client/src/Component/Userdetails/User.css
+++ b/Client/src/Component/Userdetails/User.css
@@ -23,11 +23,23 @@ table {
     background: none;
 color: rgb(23, 98, 196);
   }
- span{
+  .avatar{
      margin:0;
      padding: 0;
      display: flex;
      flex-direction: row;
      gap :20px;
      align-items: center;
+ }
+ ul{
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     gap:10px;
+     
+ }
+ p{
+    justify-content: space-around;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 1000;
  }
